--- a/WebContent/pages/beneficioCadastro.xhtml
+++ b/WebContent/pages/beneficioCadastro.xhtml
@@ -52,22 +52,23 @@
 					<f:validateBean />
 				</p:selectOneMenu>
 
-				<p:outputLabel for="diasemana" value="Dia da Semana:" />
-				<p:selectOneMenu id="diasemana"
+				<p:outputLabel for="diaSemana" value="Dia da Semana:" />
+				<p:selectOneMenu id="diaSemana"
 					value="#{beneficioBean.beneficioCadastro.diaDaSemana}">
-					<f:selectItem itemLabel="Selecione um dia da semana" itemValue="" />
-					<f:selectItem itemLabel="Segunda" itemValue="Segunda" />
-					<f:selectItem itemLabel="Terça" itemValue="Terça" />
-					<f:selectItem itemLabel="Quarta" itemValue="Quarta" />
-					<f:selectItem itemLabel="Quinta" itemValue="Quinta" />
-					<f:selectItem itemLabel="Sexta" itemValue="Sexta" />
-					<f:selectItem itemLabel="Segunda a Sexta"
-						itemValue="Segunda a Sexta" />
-					<f:selectItem itemLabel="Segunda a Quinta"
-						itemValue="Segunda a Quinta" />
-					<f:selectItem itemLabel="Segunda/Quinta" itemValue="Segunda/Quinta" />
-					<f:selectItem itemLabel="Segunda/Quarta" itemValue="Segunda/Quarta" />
-					<f:selectItem itemLabel="Terça/Quinta" itemValue="Terça/quinta" />
+					<f:selectItem itemLabel="Selecione um dia da semana..."
+						itemValue="" />
+					<f:selectItem itemLabel="SEGUNDA" itemValue="SEGUNDA" />
+					<f:selectItem itemLabel="TERÇA" itemValue="TERÇA" />
+					<f:selectItem itemLabel="QUARTA" itemValue="QUARTA" />
+					<f:selectItem itemLabel="QUINTA" itemValue="QUINTA" />
+					<f:selectItem itemLabel="SEXTA" itemValue="SEXTA" />
+					<f:selectItem itemLabel="SEGUNDA A SEXTA"
+						itemValue="SEGUNDA A SEXTA" />
+					<f:selectItem itemLabel="SEGUNDA A QUINTA"
+						itemValue="SEGUNDA A QUINTA" />
+					<f:selectItem itemLabel="SEGUNDA/QUINTA" itemValue="SEGUNDA/QUINTA" />
+					<f:selectItem itemLabel="SEGUNDA/QUARTA" itemValue="SEGUNDA/QUARTA" />
+					<f:selectItem itemLabel="TERÇA/QUINTA" itemValue="TERÇA/QUINTA" />
 				</p:selectOneMenu>
 
 				<p:outputLabel for="horarioInicio" value="Horário Início:" />
