--- a/WebContent/pages/inscritoPesquisa.xhtml
+++ b/WebContent/pages/inscritoPesquisa.xhtml
@@ -58,7 +58,8 @@
 						style="text-transform: uppercase;" />
 				</p:column>
 
-				<p:column headerText="PF" style="text-align: center; width: 10%;">
+				<p:column headerText="PF" style="text-align: center; width: 10%;"
+					filterBy="#{inscrito.pf}">
 					<h:outputText value="#{inscrito.pf}" />
 				</p:column>
 
