--- a/WebContent/pages/usuarioCadastro.xhtml
+++ b/WebContent/pages/usuarioCadastro.xhtml
@@ -42,8 +42,8 @@
 				</p:inputText>
 
 				<p:outputLabel value="Senha:" />
-				<p:password maxlength="8" size="15"
-					value="#{usuarioBean.usuarioCadastro.senha}">
+				<p:password maxlength="10" size="15"
+					value="#{usuarioBean.usuarioCadastro.senha}" redisplay="true">
 					<f:validateBean />
 				</p:password>
 
