removido campo, atributo e coluna tipo cadastro usuário

--- a/WebContent/pages/inscritoCadastro.xhtml
+++ b/WebContent/pages/inscritoCadastro.xhtml
@@ -54,7 +54,7 @@
 
 				<p:outputLabel value="Idade:" />
 				<p:inputText maxlength="50" size="15"
-					readonly="#{inscritoBean.acao == 'Excluir'}" value="">
+					readonly="#{inscritoBean.acao == 'Excluir'}">
 					<f:validateBean />
 				</p:inputText>
 
