--- a/WebContent/pages/beneficioCadastro.xhtml
+++ b/WebContent/pages/beneficioCadastro.xhtml
@@ -142,8 +142,7 @@
 				<p:outputLabel value="Data Fim:" />
 				<p:calendar value="#{beneficioBean.beneficioCadastro.dataFim}"
 					readonly="#{beneficioBean.acao == 'Excluir'}" size="15" mask="true"
-					pattern="dd/MM/yyyy" required="true"
-					requiredMessage="O campo Data Fim é obrigatório." />
+					pattern="dd/MM/yyyy" />
 			</h:panelGrid>
 
 			<h:panelGrid columns="5">
