Adicionado Jasper Reports ao projeto controle beneficio

--- a/WebContent/pages/inscritoPesquisa.xhtml
+++ b/WebContent/pages/inscritoPesquisa.xhtml
@@ -117,8 +117,7 @@
 
 					<h:outputText value="Idade:" />
 					<h:inputText style="text-transform: uppercase;" size="15"
-						disabled="true"
-						value="#{inscritoBean.calculaIdade()} ANOS" />
+						disabled="true" value="#{inscritoBean.calculaIdade()} ANOS" />
 
 					<h:outputText value="Registro/RG:" />
 					<h:inputText style="text-transform: uppercase;" size="15"
