Adicionado xhtml do backup e relatórios

--- a/WebContent/pages/beneficioPesquisa.xhtml
+++ b/WebContent/pages/beneficioPesquisa.xhtml
@@ -20,7 +20,7 @@
 		<h:form id="formBeneficio">
 			<p:toolbar>
 				<f:facet name="left">
-					<h:outputText value="Cadastro de Benefícios" />
+					<h:outputText value="Benefícios" />
 				</f:facet>
 			</p:toolbar>
 
