--- a/WebContent/pages/inscritoPesquisa.xhtml
+++ b/WebContent/pages/inscritoPesquisa.xhtml
@@ -20,7 +20,7 @@
 		<h:form id="formInscrito">
 			<p:toolbar>
 				<f:facet name="left">
-					<h:outputText value="Cadastro Inscrição" />
+					<h:outputText value="Inscritos" />
 				</f:facet>
 			</p:toolbar>
 
