--- a/WebContent/pages/atividadeCadastro.xhtml
+++ b/WebContent/pages/atividadeCadastro.xhtml
@@ -22,7 +22,8 @@
 
 			<p:toolbar>
 				<f:facet name="left">
-					<h:outputText value="Ficha Cadastral - Atividades" />
+					<h:outputText
+						value="Ficha Cadastral - Atividades / Cursos / Oficinas" />
 				</f:facet>
 			</p:toolbar>
 
