--- a/WebContent/pages/inscritoCadastro.xhtml
+++ b/WebContent/pages/inscritoCadastro.xhtml
@@ -22,7 +22,7 @@
 
 			<p:toolbar>
 				<f:facet name="left">
-					<h:outputText value="Ficha Cadastral - Atividades" />
+					<h:outputText value="Ficha Cadastral - Inscritos" />
 				</f:facet>
 			</p:toolbar>
 
